Improve Gemini integration and UI polish
Pin Gemini model and harden API usage; refine UI and notifications. Changes: pin Gemini API to gemini-2.0-flash-001 and switch GeminiRequest to use Collections.singletonList for parts; add API key validation, richer error handling (read error body, map HTTP codes to user-friendly messages), and remove failed user messages from conversation history in GeminiRepository. ReminderReceiver now includes a full‑color large icon and adjusted accent color for notifications. AssistantFragment and OnboardingPageFragment include UI tweaks (typing wrapper, send-on-keyboard, updated animations and view bindings). LoginActivity skips login when session exists and ensures activity finishes after navigating to main. Also add several drawable assets (logo, backgrounds, send button) and night theme color updates.